--- a/src/main/gui/WorldWindow.fxml
+++ b/src/main/gui/WorldWindow.fxml
@@ -18,24 +18,29 @@
                   <Separator halignment="RIGHT" maxWidth="1.7976931348623157E308" prefWidth="200.0" />
                   <HBox alignment="CENTER_LEFT" maxHeight="50.0" prefHeight="47.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button fx:id="startStopButton" mnemonicParsing="false" onAction="#onStartStopButtonClick" prefHeight="40.0" prefWidth="65.0" text="Stop">
+                        <Button fx:id="startStopButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onStartStopButtonClick" prefHeight="40.0" prefWidth="65.0" text="Stop">
                            <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" top="5.0" />
+                              <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="newWorldButton" mnemonicParsing="false" onAction="#onNewWorldButtonClick" prefHeight="37.0" prefWidth="95.0" text="New World">
+                        <Button fx:id="newWorldButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNewWorldButtonClick" prefHeight="40.0" prefWidth="95.0" text="New World">
                            <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" top="5.0" />
+                              <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin>
                         </Button>
-                        <Label fx:id="creatureCountLabel" prefHeight="37.0" prefWidth="100.0" text="Label">
+                        <ToggleButton minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onFastForwardToggleClick" prefHeight="40.0" prefWidth="95.0" text="Fast Forward">
                            <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" top="5.0" />
+                              <Insets bottom="5.0" left="5.0" top="3.0" />
+                           </HBox.margin>
+                        </ToggleButton>
+                        <Label fx:id="creatureCountLabel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="100.0" text="Label">
+                           <HBox.margin>
+                              <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin>
                         </Label>
-                        <Label fx:id="plantCountLabel" prefHeight="37.0" prefWidth="100.0" text="Label">
+                        <Label fx:id="plantCountLabel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="100.0" text="Label">
                            <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" top="5.0" />
+                              <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin>
                         </Label>
                      </children>
