--- a/src/gui/WorldWindow.fxml
+++ b/src/gui/WorldWindow.fxml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="200.0" prefWidth="548.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.WorldWindowCtrl">
+<AnchorPane prefHeight="749.0" prefWidth="833.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.WorldWindowCtrl">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
-            <Pane fx:id="worldCanvasPane" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <Pane fx:id="worldCanvasPane" prefHeight="200.0" prefWidth="200.0" />
          </center>
          <bottom>
             <VBox maxWidth="1.7976931348623157E308" prefHeight="50.0" prefWidth="100.0">
@@ -23,32 +29,27 @@
                   <Separator halignment="RIGHT" maxWidth="1.7976931348623157E308" prefWidth="200.0" />
                   <HBox alignment="CENTER_LEFT" maxHeight="50.0" prefHeight="47.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button fx:id="startStopButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onStartStopButtonClick" prefHeight="40.0" prefWidth="65.0" text="Stop">
+                        <Button fx:id="startStopButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onStartStopButtonClick" prefHeight="40.0" prefWidth="100.0" text="Stop">
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="newWorldButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNewWorldButtonClick" prefHeight="40.0" prefWidth="95.0" text="New World">
-                           <HBox.margin>
-                              <Insets bottom="5.0" left="5.0" top="3.0" />
-                           </HBox.margin>
-                        </Button>
-                        <ToggleButton minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onFastForwardToggleClick" prefHeight="40.0" prefWidth="95.0" text="Fast Forward">
+                        <ToggleButton minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onFastForwardToggleClick" prefHeight="40.0" prefWidth="100.0" text="Fast Forward">
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin>
                         </ToggleButton>
-                        <Label fx:id="creatureCountLabel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="100.0" text="Label">
+                        <Button fx:id="newWorldButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onNewWorldButtonClick" prefHeight="40.0" prefWidth="100.0" text="New World">
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin>
-                        </Label>
-                        <Label fx:id="plantCountLabel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="100.0" text="Label">
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#onStatisticButtonClick" prefHeight="40.0" prefWidth="100.0" text="Statistic">
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin>
-                        </Label>
-                        <Label fx:id="fpsLabel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="100.0" text="Test">
+                        </Button>
+                        <Label fx:id="fpsLabel" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="100.0" text="0 fps (0 sps)">
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" top="3.0" />
                            </HBox.margin></Label>
@@ -57,6 +58,128 @@
                </children>
             </VBox>
          </bottom>
+         <right>
+            <AnchorPane fx:id="selectedAnchor" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="695.0" prefWidth="265.0" BorderPane.alignment="CENTER_RIGHT">
+               <children>
+                  <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Separator orientation="VERTICAL" prefHeight="200.0" />
+                        <AnchorPane prefHeight="695.0" prefWidth="260.0">
+                           <children>
+                              <GridPane alignment="TOP_CENTER" prefHeight="695.0" prefWidth="263.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="10.0" prefWidth="98.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.0" minWidth="10.0" prefWidth="162.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="NEVER" />
+                                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="0.0" prefHeight="0.0" vgrow="ALWAYS" />
+                                </rowConstraints>
+                                 <children>
+                                    <AnchorPane>
+                                       <children>
+                                          <Canvas fx:id="selectedCanvas" height="100.0" width="100.0" />
+                                       </children>
+                                    </AnchorPane>
+                                    <HBox GridPane.columnIndex="1" GridPane.rowSpan="2">
+                                       <children>
+                                          <Separator orientation="VERTICAL" prefHeight="200.0" />
+                                          <VBox prefHeight="695.0" prefWidth="154.0">
+                                             <children>
+                                                <Label fx:id="idLabel" prefHeight="25.0" prefWidth="150.0" text="id">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" right="5.0" top="5.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="generationLabel" prefHeight="25.0" prefWidth="150.0" text="generation">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" right="5.0" top="5.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="ageLabel" prefHeight="25.0" prefWidth="150.0" text="age">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" right="5.0" top="5.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label fx:id="voreEfficiencyLabel" minWidth="149.0" prefHeight="25.0" prefWidth="150.0" text="vore_eff">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" top="5.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <ToggleButton fx:id="plantViewToggle" mnemonicParsing="false" onAction="#onPlantViewToggleClick" prefHeight="25.0" prefWidth="150.0" text="plant view">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" right="5.0" top="5.0" />
+                                                   </VBox.margin>
+                                                   <toggleGroup>
+                                                      <ToggleGroup fx:id="A" />
+                                                   </toggleGroup>
+                                                </ToggleButton>
+                                                <ToggleButton fx:id="creatureViewToggle" mnemonicParsing="false" onAction="#onCreatureViewToggleClick" prefHeight="25.0" prefWidth="150.0" text="creature view" toggleGroup="$A">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" right="5.0" />
+                                                   </VBox.margin>
+                                                </ToggleButton>
+                                                <ToggleButton fx:id="wallViewToggle" mnemonicParsing="false" onAction="#onWallViewToggleClick" prefHeight="25.0" prefWidth="150.0" text="wall view" toggleGroup="$A">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" right="5.0" />
+                                                   </VBox.margin>
+                                                </ToggleButton>
+                                                <ToggleButton fx:id="collisionToggle" mnemonicParsing="false" onAction="#onCollisionToggleClick" prefHeight="25.0" prefWidth="150.0" text="collision" toggleGroup="$A">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" right="5.0" />
+                                                   </VBox.margin>
+                                                </ToggleButton>
+                                                <Label fx:id="parentIdLabel" prefHeight="25.0" prefWidth="150.0" text="parent-id">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" right="5.0" top="5.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <Label text="children IDs">
+                                                   <VBox.margin>
+                                                      <Insets left="5.0" top="5.0" />
+                                                   </VBox.margin>
+                                                </Label>
+                                                <ListView fx:id="childrenListView" prefHeight="436.0" prefWidth="129.0" VBox.vgrow="ALWAYS">
+                                                   <VBox.margin>
+                                                      <Insets bottom="5.0" left="5.0" right="5.0" />
+                                                   </VBox.margin>
+                                                </ListView>
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
+                                    <AnchorPane prefHeight="598.0" prefWidth="98.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                                       <children>
+                                          <VBox alignment="TOP_CENTER" prefHeight="598.0" prefWidth="87.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                             <children>
+                                                <Separator prefWidth="200.0" />
+                                                <Pane fx:id="ressourceCanvasPane" maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="97.0" VBox.vgrow="ALWAYS" />
+                                                <Separator prefWidth="200.0" />
+                                                <ToggleButton fx:id="followToggle" mnemonicParsing="false" onAction="#onFollowToggleClick" prefHeight="25.0" prefWidth="150.0" text="Follow">
+                                                   <VBox.margin>
+                                                      <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                                                   </VBox.margin>
+                                                </ToggleButton>
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </AnchorPane>
+                                 </children>
+                              </GridPane>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
+         </right>
+         <top>
+            <AnchorPane maxHeight="0.0" prefHeight="0.0" prefWidth="833.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Separator prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+               </children>
+            </AnchorPane>
+         </top>
       </BorderPane>
    </children>
 </AnchorPane>
