--- a/src/gui/fxml/StatisticWindow.fxml
+++ b/src/gui/fxml/StatisticWindow.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -7,7 +11,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatisticWindowCtrl">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatisticWindowCtrl">
    <children>
       <TabPane prefHeight="433.0" prefWidth="532.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -37,7 +41,7 @@
             </Tab>
             <Tab fx:id="creature_plant_LineChart" text="Creatures&amp;Plants">
                <content>
-                  <LineChart legendVisible="false" title="Creatures and Plants">
+                  <LineChart fx:id="crePlaLineChart" legendVisible="false" title="Creatures and Plants">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
