--- a/src/gui/fxml/ControlWindow.fxml
+++ b/src/gui/fxml/ControlWindow.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="463.0" prefWidth="686.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="463.0" prefWidth="686.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui2.ControlWindowCtrl">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -19,7 +19,7 @@
                               <Insets />
                            </VBox.margin>
                         </Button>
-                        <ToggleButton minHeight="30.0" minWidth="120.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="120.0" text="Fast Forward">
+                        <ToggleButton fx:id="fastForwardToggleButton" minHeight="30.0" minWidth="120.0" mnemonicParsing="false" onAction="#onFastForwardToggleButtonClick" prefHeight="30.0" prefWidth="120.0" text="Fast Forward">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
@@ -29,7 +29,7 @@
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
                   </VBox>
-                  <Button mnemonicParsing="false" onAction="#onNewWorldClick" prefHeight="60.0" prefWidth="120.0" text="New World">
+                  <Button mnemonicParsing="false" onAction="#onNewWorldButtonClick" prefHeight="60.0" prefWidth="120.0" text="New World">
                      <HBox.margin>
                         <Insets bottom="30.0" left="5.0" right="5.0" />
                      </HBox.margin>
